app 95% finalizado, acesso do driver e do user feitos, rotinas para cada um funcionando e se interligando
